    build virtfs-proxy-helper stuff if not building system emulator
    (fix FTBFS on s390)
  * disable gtk ui and build dependencies, as it adds almost nothing
    compared with sdl (well, except bugs and limitations), and has
    lots of additional dependencies
  * remove obsolete /etc/init.d/qemu-kvm (Closes: #712898)
  * fix versions of obsolete qemu-kvm conffiles to be removed

 -- Michael Tokarev <mjt@tls.msk.ru>  Tue, 11 Jun 2013 00:36:04 +0400

qemu (1.5.0+dfsg-4) unstable; urgency=medium

  * urgency is medium to make it go faster because, on one hand, we've
    been in unstable for quite a bit longer than needed already and
    have nothing but (build) fixes in there, but on the other hand
    we're holding migration of other packages which are waiting for
    us, again, for too long already
  * added qemu_openpty_raw-helper.patch - a cleanup patch submitted upstream
    which removes #include <termios.h> from common header and hence works
    around FTBFS problem on debian sparc where somehow, <termios.h> conflicts
    with <linux/termio.h>.

 -- Michael Tokarev <mjt@tls.msk.ru>  Thu, 06 Jun 2013 01:50:32 +0400

qemu (1.5.0+dfsg-3) unstable; urgency=low

  * fix sections: misc => otherosfs
  * remove obsolete conffiles (kvm-ifup, kvm-ifdown, target-x86_64.conf)
    from /etc/kvm/ in qemu-kvm (Closes: #710328)
  * rework debian/rules a bit, to build various bits depending on
    which packages are requested, not depending on ad-hoc host/arch
    logic
  * do not fail at install if kvm module loading failed on x86 or
    if modprobe isn't installed (Closes: #710496)
  * also suggest kmod to be able to load x86 kvm modules
  * suggest sgabios for qemu-system-x86 and put a symlink to sgabios.bin
    (Closes: #696985)
  * add rules to build just one of arch/indep parts, to make
    buildd log scanner happier (E-binary-arch-produces-all)
  * use verbose build by default (V=1) and let it to be overridden
