@@ -307,18 +307,14 @@ Multi-Arch: foreign
 Depends: ${shlibs:Depends}, ${misc:Depends},
  qemu-system-common (>= ${source:Version}), qemu-keymaps (>= ${source:Version}),
  vgabios (>= 0.6c-3~), seabios (>= 1.7.2-2~), ipxe-qemu
-Provides: ${sysprovides:x86}, qemu-kvm, kvm
-Conflicts: kvm
+Provides: ${sysprovides:x86}
 Breaks:
   qemu-system (<< 1.3.0+dfsg-5),
-  qemu-kvm (<< 1.2.0.dfsg-1),
-  kvm,
 # older libvirt (eg 0.10.2.x) is known broken with qemu >= 1.3
   libvirt0 (<< 1.0)
 Replaces:
   qemu-system (<< 1.3.0+dfsg-5),
-  qemu-kvm (<< 1.2.0.dfsg-1),
-  kvm
+  qemu-kvm (< 1.5.0+dfsg-5~)
 Recommends: qemu-utils
 Suggests: samba, vde2, kmod, sgabios
 Description: QEMU full system emulation binaries (x86)
@@ -409,7 +405,9 @@ Section: oldlibs
 Priority: extra
 Description: QEMU Full virtualization on x86 hardware (transitional package)
  QEMU is a fast processor emulator.  This package is a transitional
- package from old qemu-kvm to qemu-system-x86.  It is safe to remove it.
+ package from old qemu-kvm to qemu-system-x86.  It is safe to remove it
+ once no other system components uses old /usr/bin/kvm binary which is
+ provided by this package and just runs qemu-system-x86_64.
  .
  Please note that old qemu-kvm configuration files (in /etc/kvm/) are
  no longer used.
