@@ -1,0 +1,7 @@
+qemu (1.5.0+dfsg-5) unstable; urgency=low
+
+  * qemu-system-x86 package does not ship /usr/bin/kvm compatibility
+    wrapper anymore.  This wrapper was intended to go into qemu-kvm
+    transition package, but mistakenly went to qemu-system-x86.
+
+ -- Michael Tokarev <mjt@tls.msk.ru>  Mon, 15 Jul 2013 12:17:53 +0400
